...

    <string name="begin_time">Begin time</string>
    <string name="repeatings">Repeatings</string>
    <string name="end_time">End time</string>
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="movies">Movies</string>
    <string name="device_info">Device Information</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
    <string name="named_message" translatable="false">%1$s \'%2$s\'</string>
    <string name="zap">Zap</string>
    <string name="browse_epg">Browse EPG</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="epg">EPG</string>
    <string name="epg_list">EPG list</string>
    <string name="epg_prime">Prime</string>
    <string name="epg_timeline">Timeline</string>
    <string name="epg_at_this_time">At this time</string>
    <string name="multiepg">MultiEPG</string>
...
    <string name="reset_cache_done">Cache reset</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_updated">Updated profile</string>
    <string name="profile_added">Added profile</string>
    <string name="profile_add">Add Profile</string>
    <string name="no_list_item">No items to display&#8230;</string>
    <string name="tags">Tags</string>
    <string name="screenshot">Screenshot</string>
    <string name="host_empty">The host name cannot be empty!</string>
    <string name="standby">Standby</string>
    <string name="restart_gui">Restart GUI</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
...
    <string name="sync_picons_path">Picons - remote path</string>
    <string name="sync_picons_path_long">Path where the Picons on your dreambox reside</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="getting_list_of_files">Getting list of files</string>
    <string name="picon_sync_finished">Successfully downloaded %s picons</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="enable_animations_long">Enable additional view animations</string>
    <string name="enable_animations">Enable animations</string>
    <string name="use_name_as_picon_filename_long">Use service name as file name for picons</string>
    <string name="use_name_as_picon_filename">Picons by service name</string>
    <string name="picons_online_use_name">Use service name for online picons</string>
    <string name="picons_online_use_name_summary">Requests online picons by service name instead of the service reference.</string>
...
